# lagoon_rest

./: .gitignore  Cargo.toml  README.md
src/: db.rs  handler.rs  main.rs
src/resources/migration/sql/: V1__lagoon_db.sql
