[package]
name = "blue-lagoon-hotel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
# sqlx = { version = "0.8.3", features = ["postgres", "rust_decimal", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"]}
tower = "0.5.2"
axum-macros = "0.5.0"
rust_decimal = "1.37.1"
# dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
